hphp/hack/test/typecheck/memoize/opaque_alias_bad_class2.php.exp
File "opaque_alias_bad_class2.php--file2.php", line 6, characters 24-26:
This is an object of type BarImpl (Typing[4149])
File "opaque_alias_bad_class2.php--file2.php", line 6, characters 28-29:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize
